crates/fixtures/tests/snapshots/hostile__content_font_generics.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office café",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 418,
                "x": 6184,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 16547,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 22044,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 27789,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 30,
                "x": 30414,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 35911,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 33,
                "x": 41644,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 263,
                "x": 45462,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Sans 3",
              "hash": "08df266400933d3178d081a45f94a088"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office café",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 32263,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 687,
                "x": 6105,
                "y": 32263,
                "text": {
                  "start": 1,
                  "end": 3
                }
              },
              {
                "id": 36,
                "x": 12604,
                "y": 32263,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 15375,
                "y": 32263,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 20275,
                "y": 32263,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 25862,
                "y": 32263,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 30,
                "x": 28115,
                "y": 32263,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 33139,
                "y": 32263,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 33,
                "x": 38816,
                "y": 32263,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 371,
                "x": 41992,
                "y": 32263,
                "text": {
                  "start": 10,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Code Pro",
              "hash": "9f9664e2edf6f045c11e774f9bd0be69"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office café",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 54181,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 33,
                "x": 6758,
                "y": 54181,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 33,
                "x": 13516,
                "y": 54181,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 36,
                "x": 20274,
                "y": 54181,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 27032,
                "y": 54181,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 33790,
                "y": 54181,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 40548,
                "y": 54181,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 30,
                "x": 47306,
                "y": 54181,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 54064,
                "y": 54181,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 33,
                "x": 60822,
                "y": 54181,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 298,
                "x": 67580,
                "y": 54181,
                "text": {
                  "start": 10,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Dancing Script",
              "hash": "21808625578fe8d8cd10cb684be546dc"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office café",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 75490,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 33,
                "x": 4111,
                "y": 75490,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 478,
                "x": 7625,
                "y": 75490,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 13877,
                "y": 75490,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 17515,
                "y": 75490,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 21266,
                "y": 75490,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 30,
                "x": 24195,
                "y": 75490,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 27833,
                "y": 75490,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 33,
                "x": 32744,
                "y": 75490,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 322,
                "x": 36258,
                "y": 75490,
                "text": {
                  "start": 10,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
