crates/fixtures/tests/snapshots/hostile__content_font_legacy_missing.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office ffi é",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 418,
                "x": 5622,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 15043,
                "y": 9733,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 20040,
                "y": 9733,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 25262,
                "y": 9733,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 418,
                "x": 27648,
                "y": 9733,
                "text": {
                  "start": 7,
                  "end": 10
                }
              },
              {
                "id": 1,
                "x": 37069,
                "y": 9733,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 263,
                "x": 39455,
                "y": 9733,
                "text": {
                  "start": 11,
                  "end": 14
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
